@@ -1,5 +1,10 @@
 2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* Download.aspx.cs: Move GetFullPath to the
+	MonkeyWrench.Database assembly.
+
+2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* Download.aspx.cs: Use TransmitFile when we have a file
 	to transmit instead of sending the file manually.
 
