@@ -1,3 +1,8 @@
+2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* DBFile_Extensions.cs: Moved GetFullPath from the web service
+	assembly here.
+
 2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* DBWork_Extensions.cs: Update according to DB API
